css: links fix dark mode

--- a/src/themes/magic-box/sass/_link.scss
+++ b/src/themes/magic-box/sass/_link.scss
@@ -8,11 +8,15 @@ a {
 
     @media (prefers-color-scheme: dark) {
         color: $font-color-dark;
-        box-shadow: 0px -1vh 0px $link-color-dark inset;
+        box-shadow: 0px -0.45em 0px $link-color-dark inset;
     }
 }
 
 
 a:hover {
     box-shadow: 0px -1.1em 0px $link-color-light inset;
+
+    @media (prefers-color-scheme: dark) {
+        box-shadow: 0px -1.1em 0px $link-color-dark inset;
+    }
 }
